welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: ')' expected but ';' found.
                    {lignemotif1(Color.red;Color:blue)
                                          ^PatternPicture:2: error: ';' expected but ')' found.
                    {lignemotif1(Color.red;Color:blue)
                                                     ^